@@ -1,4 +1,5 @@
 v5.3.0.0
+- Added /pumpkin
 - Updated developer list.
 - Added tempranks.
 - Added /baninfo - shows info about someone's ban.
